# minionerec-jax-repro

./: .gitignore  README.md  pyproject.toml
docs/: paper_alignment.md  tpu_runbook.md
scripts/: bootstrap_env.sh  check_github_prereqs.sh  publish_to_github.sh  run_local_smoke.sh
scripts/tpu/: create_tpu_vm.sh  delete_tpu_vm.sh  run_remote_pipeline.sh  setup_tpu_runtime.sh
src/minionerec_jax/: __init__.py  beam_constraints.py  checkpoint.py  cli.py  config.py  eval_metrics.py  logging_utils.py  official_eval_parity.py  paths.py
src/minionerec_jax/data/: __init__.py  artifact_manifest.py
tests/: test_beam_constraints.py  test_eval_metrics.py  test_official_eval_parity.py
