[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minionerec-jax"
version = "0.1.0"
description = "Scaffold project for MiniOneRec JAX reproduction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
load-probe = [
  "easydel>=0.1.4.1",
  "jax>=0.4.35",
]

[project.scripts]
minionerec-jax = "minionerec_jax.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
